--- a/Game_of_Life/Game_of_Life.vcxproj
+++ b/Game_of_Life/Game_of_Life.vcxproj
@@ -127,8 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Game_of_Life.cpp" />
-    <ClCompile Include="Cool_Version.cpp" />
+    <ClCompile Include="Game_of_Life_1.cpp" />
+    <ClCompile Include="Game_of_Life_2a.cpp" />
     <ClCompile Include="Grid.cpp" />
   </ItemGroup>
   <ItemGroup>
